--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Middleborn Music</title>
+<title>Endless Twin</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -11,29 +11,29 @@
         padding: 0;
     }
     header {
-        background-color: #333;
-        color: #fff;
-        padding: 10px 0;
+        background-color: #fff;
+        color: #000;
+        padding: 20px 0;
         text-align: center;
     }
     nav a {
-        color: #fff;
+        color: #553065;
         text-decoration: none;
         margin: 0 10px;
     }
     .logo {
         text-align: center;
-        margin-top: 20px;
+        margin-top: 80px;
     }
     .banner {
         display: block;
         margin: 20px auto;
-        max-width: 100%;
+        max-width: 80%;
         height: auto;
     }
     footer {
-        background-color: #333;
-        color: #fff;
+        background-color: #fff;
+        color: #000;
         text-align: center;
         padding: 10px 0;
         position: fixed;
@@ -41,22 +41,6 @@
         width: 100%;
     }
 
-    /* Media Queries for responsiveness */
-    @media only screen and (max-width: 600px) {
-        .logo {
-            margin-top: 10px;
-        }
-    }
-
-    @media only screen and (max-width: 400px) {
-        nav a {
-            display: block;
-            margin: 5px 0;
-        }
-        .banner {
-            margin: 10px auto;
-        }
-    }
 </style>
 </head>
 <body>
@@ -67,7 +51,7 @@
         </nav>
     </header>
     <div class="logo">
-        <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Logo">
+        <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Logo" style="max-width:80%;height:auto;">
     </div>
     <div>
         <p style="text-align: center;">Your description goes here.</p>
