--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     .logo {
         text-align: center;
         margin-top: 80px;
+        style="max-width:60%;height:auto;"
     }
     .banner {
         display: block;
         margin: 20px auto;
-        max-width: 80%;
+        max-width: 60%;
         height: auto;
     }
     footer {
@@ -36,7 +37,6 @@
         color: #000;
         text-align: center;
         padding: 10px 0;
-        position: fixed;
         bottom: 0;
         width: 100%;
     }
@@ -51,7 +51,7 @@
         </nav>
     </header>
     <div class="logo">
-        <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Logo" style="max-width:80%;height:auto;">
+        <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Logo">
     </div>
     <div>
         <p style="text-align: center;">Your description goes here.</p>
