--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
     .logo {
         text-align: center;
         margin-top: 80px;
-        style="max-width:60%;height:auto;"
+        max-width:40%;
+        height:auto;
     }
     .banner {
         display: block;
         margin: 20px auto;
-        max-width: 60%;
+        max-width: 40%;
         height: auto;
     }
     footer {
