--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
         padding: 0;
     }
     header {
-        background-color: #fff;
-        color: #000;
-        padding: 20px 0;
+        color: #888;
+        margin-top: 10px;
+        display: block;
+        float: none;
+        width: 100%;
         text-align: center;
     }
     nav a {
-        color: #553065;
+        color: #888;
         text-decoration: none;
         margin: 0 10px;
     }
@@ -55,7 +57,7 @@
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Logo">
     </div>
     <div>
-        <p style="text-align: center;">Your description goes here.</p>
+        <p style="text-align: center;">Hey spotify for artists! contact@middlebornmusic.com is my label!</p>
         <img class="banner" src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Banner">
     </div>
     <footer>
