--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
     }
     .logo {
         text-align: center;
-        margin-top: 80px;
-        max-width:40%;
-        height:auto;
+    	margin-top: 40px;
+    	max-width: 100%;
+    	width: 100%; /* Add this line */
+    	display: block;
+    	margin-left: auto; /* Center the logo horizontally */
+   		margin-right: auto; /* Center the logo horizontally */
+    	height: auto;
     }
     .banner {
         display: block;
