--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 <title>Endless Twin</title>
 <style>
     body {
-        font-family: Arial, sans-serif;
+        font-family: 'Calluna', serif, georgia, serif;
+        font-weight: normal;
         margin: 0;
         padding: 0;
     }
     header {
-        background-color: #333;
-        color: white;
+        color: #777;
         text-align: center;
         padding: 10px 0;
     }
     header a {
-        color: white;
+        color: #777;
         text-decoration: none;
         margin: 0 10px;
     }
@@ -26,6 +26,7 @@
         height: auto;
         display: block;
         margin: 0 auto;
+        padding: 1em;
     }
     .description {
         text-align: center;
@@ -38,7 +39,7 @@
         margin: 0 auto;
     }
     footer {
-        background-color: #333;
+        background-color: #fff;
         color: white;
         text-align: center;
         padding: 10px 0;
