--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     }
     footer {
         background-color: #fff;
-        color: white;
+        color: #777;
         text-align: center;
         padding: 10px 0;
         position: absolute;
