--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     header {
         color: #777;
         text-align: center;
-        padding: 10px 0;
+        padding: 1em 0;
     }
     header a {
         color: #777;
