--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Endless Twin Logo" class="logo">
         <p class="description">Hey spotify for artists! contact@middlebornmusic.com is my label!</p>
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Endless Twin Banner" class="banner">
+        <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Endless Twin Banner" class="banner">
     </div>
     <footer>
         © Middleborn Music <span id="year"></span>
