--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         height: auto;
         display: block;
         margin: 0 auto;
+        padding-top: 5em;
     }
     footer {
         background-color: #fff;
