--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         color: #777;
         text-align: center;
         padding: 10px 0;
-        position: absolute;
+        position: relative;
         bottom: 0;
         width: 100%;
     }
