--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
         font-family: 'Calluna', serif, georgia, serif;
         font-weight: normal;
+        color: #777;
         margin: 0;
         padding: 0;
     }
@@ -22,22 +23,24 @@
         margin: 0 10px;
     }
     .logo {
-        max-width: 90%;
+        max-width: 700px;
+        width: 90%;
         height: auto;
         display: block;
         margin: 0 auto;
-        padding: 1em;
+        padding-top: 1em;
     }
     .description {
         text-align: center;
         margin: 20px 0;
     }
     .banner {
-        max-width: 90%;
+        max-width: 700px;
+        width: 90%;
         height: auto;
         display: block;
         margin: 0 auto;
-        padding-top: 5em;
+        padding-top: 7em;
     }
     footer {
         background-color: #fff;
