--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 </head>
 <body>
     <header>
-        <a href="https://www.example.com">Music</a>
-        <a href="https://www.example.com">Connect</a>
+        <a href="https://open.spotify.com/artist/5LkxOmrVlAgb4p0H58UqKD?si=GnME8IKaT6qIsiq-I80m2A">Music</a>
+        <a href="https://www.middlebornmusic.com/connect">Connect</a>
     </header>
     <div class="content">
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Endless Twin Logo" class="logo">
