--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         color: #777;
         margin: 0;
         padding: 0;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
     }
     header {
         color: #777;
@@ -42,6 +45,9 @@
         margin: 0 auto;
         padding-top: 7em;
     }
+    .content {
+    	flex-grow:1;
+    }
     footer {
         background-color: #fff;
         color: #777;
@@ -55,8 +61,8 @@
 </head>
 <body>
     <header>
-        <a href="https://open.spotify.com/artist/5LkxOmrVlAgb4p0H58UqKD?si=GnME8IKaT6qIsiq-I80m2A">Music</a>
-        <a href="https://www.middlebornmusic.com/connect">Connect</a>
+        <a href="https://www.example.com">Music</a>
+        <a href="https://www.example.com">Connect</a>
     </header>
     <div class="content">
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Endless Twin Logo" class="logo">
