--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <p class="description">Hey spotify for artists! contact@middlebornmusic.com is my label!</p>
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Endless Twin Banner" class="banner">
     </div>
+    <div class="line"></div>
     <footer>
         © Middleborn Music <span id="year"></span>
     </footer>
