--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Endless Twin</title>
+<meta name="description" content="The twin don't stop being endless.">
+<!-- customize preview image, title, and description -->
+<meta property="og:title" content="Endless Twin">
+<meta property="og:description" content="The twin don't stop being endless.">
+<meta property="og:image" content="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg">
+<meta property="og:url" content="https://endlesstwin.com">
+
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
