--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     .description {
         text-align: center;
         margin: 20px 0;
+        padding: 2em;
     }
     .banner {
         max-width: 700px;
@@ -62,7 +63,7 @@
         height: auto;
         display: block;
         margin: 0 auto;
-        padding-top: 7em;
+        padding-top: 1vh;
     }
     .content {
     	flex-grow:1;
