--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
     <div class="content">
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Endless Twin Logo" class="logo">
         <p class="description">Hey spotify for artists! contact@middlebornmusic.com is my label!</p>
-        <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Endless Twin Banner" class="banner">
+        <a href="https://hello.middlebornmusic.com/endlesstwin/thewindow">
+            <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Endless Twin Banner" class="banner">
+        </a>
     </div>
     <div class="line"></div>
     <footer>
