--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="line"></div>
     <div class="content">
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Endless Twin Logo" class="logo">
-        <p class="description">Music coming soon!</p>
+        <p class="description">Andy Thies: AndyLawrenceThies@gmail.com</p>
         <a href="https://hello.middlebornmusic.com/endlesstwin/thewindow">
             <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Endless Twin Banner" class="banner">
         </a>
