--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body>
     <header>
-        <a href="https://open.spotify.com/artist/5LkxOmrVlAgb4p0H58UqKD?si=a0ssm4zYRk6xKtQZ1brFag">Music</a>
+        <a href="https://hello.middlebornmusic.com/endlesstwin/thewindow">Music</a>
         <a href="https://www.middlebornmusic.com/connect">Connect</a>
     </header>
     <div class="line"></div>
