--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
 </head>
 <body>
     <header>
-        <a href="https://hello.middlebornmusic.com/endlesstwin/thewindow">Music</a>
+        <a href="https://open.spotify.com/artist/6RLpzrj6EfGaOMkmUuQAAI?si=xQRSl9jGQw2KyNg6vWYGvw">Music</a>
         <a href="https://www.middlebornmusic.com/connect">Connect</a>
     </header>
     <div class="line"></div>
     <div class="content">
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Endless Twin Logo" class="logo">
-        <p class="description">Andy Thies: AndyLawrenceThies@gmail.com</p>
-        <a href="https://hello.middlebornmusic.com/endlesstwin/thewindow">
+        <p class="description"> /p>
+        <a href="https://open.spotify.com/artist/6RLpzrj6EfGaOMkmUuQAAI?si=xQRSl9jGQw2KyNg6vWYGvw">
             <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Endless Twin Banner" class="banner">
         </a>
     </div>
