--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="line"></div>
     <div class="content">
         <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Logo.png" alt="Endless Twin Logo" class="logo">
-        <p class="description"> /p>
+        <p class="description"> </p>
         <a href="https://open.spotify.com/artist/6RLpzrj6EfGaOMkmUuQAAI?si=xQRSl9jGQw2KyNg6vWYGvw">
             <img src="https://raw.githubusercontent.com/stapleshotz/endlesstwin/main/EndlessTwin_Banner.jpg" alt="Endless Twin Banner" class="banner">
         </a>
